# phosphene

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
Scripts/: build.sh  copy-to-sd.sh  setup.sh
src/boot/: boot.S  init.cpp
src/fluorescent/: Fluorescent.cpp  Fluorescent.h  Optional.h
src/kernel/: Kernel.h  MemoryManagement.cpp  MemoryManagement.h  Processor.h  Random.cpp  Random.h  main.cpp
src/kernel/RPi3/: RandomImplementation.cpp  RandomImplementation.h
src/kernel/RPi4/: RandomImplementation.cpp  RandomImplementation.h
src/kernel/asm/: CurrentELRegister.h  MainIdRegister.h
src/kernel/io/: MMIO.cpp  MMIO.h  UART.cpp  UART.h
src/types/: integer.h
